tests-build/tests/fail/macros_type_mismatch.stderr
error[E0308]: mismatched types
 --> tests/fail/macros_type_mismatch.rs:5:5
  |
5 |     Ok(())
  |     ^^^^^^ expected `()`, found `Result<(), _>`
  |
  = note: expected unit type `()`
                  found enum `Result<(), _>`

error[E0308]: mismatched types
  --> tests/fail/macros_type_mismatch.rs:10:12
   |
10 |     return Ok(());
   |            ^^^^^^ expected `()`, found `Result<(), _>`
   |
   = note: expected unit type `()`
                   found enum `Result<(), _>`

error[E0308]: mismatched types
  --> tests/fail/macros_type_mismatch.rs:14:46
   |
14 |   async fn extra_semicolon() -> Result<(), ()> {
   |  ______________________________________________^
15 | |     Ok(());
   | |           - help: remove this semicolon to return this value
16 | | }
   | |_^ expected `Result<(), ()>`, found `()`
   |
   = note:   expected enum `Result<(), ()>`
           found unit type `()`

error[E0308]: mismatched types
  --> tests/fail/macros_type_mismatch.rs:31:69
   |
31 |   async fn question_mark_operator_with_invalid_option() -> Option<()> {
   |  _____________________________________________________________________^
32 | |     None?;
   | |          - help: remove this semicolon to return this value
33 | | }
   | |_^ expected `Option<()>`, found `()`
   |
   = note:   expected enum `Option<()>`
           found unit type `()`

error[E0308]: mismatched types
  --> tests/fail/macros_type_mismatch.rs:48:73
   |
48 |   async fn question_mark_operator_with_invalid_result() -> Result<(), ()> {
   |  _________________________________________________________________________^
49 | |     Ok(())?;
50 | | }
   | |_^ expected `Result<(), ()>`, found `()`
   |
   = note:   expected enum `Result<(), ()>`
           found unit type `()`

error[E0308]: mismatched types
  --> tests/fail/macros_type_mismatch.rs:57:12
   |
56 | async fn issue_4635() {
   |                      - help: try adding a return type: `-> i32`
57 |     return 1;
   |            ^ expected `()`, found integer
